# llmeng

./: .gitignore  Justfile  infer.py  load_articles_from_json.py  pyproject.toml  test_unsloth.py
configs/: digital_data_etl_maxime_labonne.yaml  digital_data_etl_paul_iusztin.yaml  feature_engineering.yaml
llmeng/: nosql.py  settings.py  utils.py
llmeng/app/crawlers/: base.py  custom_article.py  dispatcher.py  github.py  linkedin.py  medium.py
llmeng/app/networks/: base.py  embeddings.py
llmeng/app/preprocessing/: chunking_data_handlers.py  cleaning_data_handlers.py  dispatchers.py  embedding_data_handlers.py
llmeng/app/preprocessing/operations/: __init__.py  chunking.py
llmeng/domain/: chunks.py  documents.py  embedded_chunks.py  queries.py
llmeng/domain/base/: nosql.py  vector.py
llmeng/infra/: qdrant.py
pipelines/: end_to_end_data.py  feature_engineering.py
steps/: __init__.py  crawl_links.py  etl.py  get_or_create_user.py  load_to_vector_db.py
steps/feature_engineering/: clean.py  load_to_vector_db.py  query_data_warehouse.py  rag.py
tools/: run.py
