[project]
name = "llmeng"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "zenml[server]>=0.70.0",
    "numpy>=1.19.5,<2",
    "rich>=13.9.4",
    "click>=8.1.3",
    "loguru>=0.7.2",
    "tqdm>=4.67.0",
    "playwright>=1.48.0",
    "bs4>=0.0.2",
    "pydantic-settings>=2.6.1",
    "langchain-community>=0.3.7",
    "mypy>=1.13.0",
    "types-beautifulsoup4>=4.12.0.20241020",
    "html2text>=2024.2.26",
    "typer>=0.13.1",
]

[dependency-groups]
dev = ["black>=24.10.0", "pytest>=8.3.3", "ruff>=0.7.4"]
